# hrb_event_flow_app

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT_FIX.md  EMAIL_DEBUG_GUIDE.md  ENHANCEMENT_SUMMARY.md  PASSWORD_CHECK_ANALYSIS.md  QUIZ_MANAGEMENT.md  SETUP_COMPLETE.md  UI_TRANSFORMATION.md  app.py  check_failed_participant.py  create_superadmin.py  debug_admin_user.py  examine_backup.py  index.py  init_db.py  migrate_auth_system.py  migrate_db.py  migrate_email_tracking.py  migrate_participant_limit.py  migrate_participants.py  migrate_password_reset.py  migrate_safe.py  migrate_to_production.py  pagination_styles.css  preflight_check.py  pyproject.toml  requirements.txt  reset_admin_password.py  reset_db.py  run_app.py  setup_db_url.py  test_imports.py  test_setup.py  vercel.json  wsgi.py
.github/agents/: full_stack_agent_event_app.agent.md
api/: index.py
static/css/: style.css  style.css.bak  style_v2_backup.css
templates/: 401.html  404.html  500.html  add_quiz_question.html  admin_feedback_view.html  base.html  certificate_assets.html  certificate_preview.html  certificate_professional.html  create_event.html  edit_event.html  edit_participant.html  event_created_success.html  event_dashboard.html  feedback_form.html  index.html  play_quiz.html  qr_checkin_admin.html  qr_checkin_participant.html  quiz_config.html  quiz_dashboard.html  quiz_ended.html  quiz_gamemaster.html  quiz_leaderboard.html  quiz_share.html  upload_participants.html  upload_quiz_questions.html
templates/analytics/: dashboard.html
utils/: quiz_performance.py  storage.py
(+14 files in other folders)
