[project]
name = "event-ticketing-app"
version = "1.0.0"
description = "Event ticketing and quiz management system"
requires-python = ">=3.11,<3.12"
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Mail==0.9.1",
    "Flask-WTF==1.2.1",
    "Flask-Login==0.6.3",
    "Flask-Bcrypt==1.0.1",
    "WTForms==3.1.1",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "email-validator==2.1.0",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "qrcode==7.4.2",
    "Pillow==10.1.0",
]

[tool.uv]
dev-dependencies = []
